added routes for docs and logout
also refactored the html, adding navbar and placeholder for the
routes.

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Mugen DMS</title>
-    <link rel="stylesheet" href="/static/css/uikit-rtl.css" />
     <link rel="stylesheet" href="/static/css/uikit.css" />
     <script src="/static/js/uikit.js"></script>
     <script src="/static/js/uikit-icons.js"></script>
   </head>
   <body>
     <div id="app-container"></div>
+    <script type="module" src="/static/js/mugen.js"></script>
   </body>
 </html>
 
