seperated login from content

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Mugen DMS</title>
     <link rel="stylesheet" href="/static/css/uikit.css" />
+    <link rel="stylesheet" href="/static/css/mugen.css" />
     <script src="/static/js/uikit.js"></script>
     <script src="/static/js/uikit-icons.js"></script>
   </head>
