uikit min and jquery

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Mugen DMS</title>
-    <link rel="stylesheet" href="/static/css/uikit.css" />
+    <link rel="stylesheet" href="/static/css/uikit.min.css" />
     <link rel="stylesheet" href="/static/css/mugen.css" />
-    <script src="/static/js/uikit.js"></script>
-    <script src="/static/js/uikit-icons.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="/static/js/uikit.min.js"></script>
+    <script src="/static/js/uikit-icons.min.js"></script>
   </head>
   <body>
     <div id="app-container"></div>
