--- a/assets/index.html
+++ b/assets/index.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html lang="de">
-  <head>
-    <meta charset="utf-8" />
-    <title>Mugen DMS</title>
-    <link rel="stylesheet" href="/assets/css/uikit.min.css" />
-    <link rel="stylesheet" href="/assets/css/mugen.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="/assets/js/uikit.min.js"></script>
-    <script src="/assets/js/uikit-icons.min.js"></script>
-    <script type="module" src="/assets/js/mugen.js"></script>
-  </head>
-  <body>
-  </body>
-</html>
+<!DOCTYPE html><html><head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Jikan</title>
+    <link rel="stylesheet" href="/app.css">
 
+    <link rel="stylesheet" href="/index-597d90855083f957.css">
+    <style type="text/css">
+</style>
+    <base href="/">
+
+<link rel="preload" href="/mugen-ui-88b8fe3e7a52402f_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/mugen-ui-88b8fe3e7a52402f.js"></head>
+<body class="bg-slate-300">
+
+
+
+<script type="module">import init from '/mugen-ui-88b8fe3e7a52402f.js';init('/mugen-ui-88b8fe3e7a52402f_bg.wasm');</script></body></html>
