--- a/mugen-ui/index.html
+++ b/mugen-ui/index.html
@@ -10,7 +10,7 @@
     <link data-trunk rel="scss" data-inline href="static/inline.scss"/>
     <base data-trunk-public-url/>
 </head>
-<body class="bg-slate-300">
+<body class="bg-white dark:bg-gray-900">
 </body>
 </html>
 
