--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link data-trunk rel="rust" data-wasm-opt="z" />
     <!--<link data-trunk rel="icon" type="image/ico" href="/public/favicon.ico" /> -->
+    <link data-trunk rel="copy-dir" href="assets"/>
     <link data-trunk rel="tailwind-css" href="tailwind.css"/>
 
     <title>Mugen DMS</title>
