--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full">
+<html lang="en" class="h-full scrollbar-thumb-amber-600 scrollbar-track-gray-950">
 
 <head>
     <meta charset="utf-8" />
