--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,6 @@
     <title>Mugen DMS</title>
 </head>
 
-<body class="p-5 bg-gray-950 antialiased !p-0"></body>
+<body class="bg-gray-950 antialiased !p-0"></body>
 
 </html>
